Fixing login and register flow
