# Backend/openapi.json
@@ -25,7 +25,27 @@
           "x-position": 1
         },
         "responses": {
-          "200": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthResult"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthResult"
+                }
+              }
+            }
+          },
+          "422": {
             "description": "",
             "content": {
               "application/json": {
@@ -58,6 +78,16 @@
         },
         "responses": {
           "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthResult"
+                }
+              }
+            }
+          },
+          "400": {
             "description": "",
             "content": {
               "application/json": {
@@ -123,7 +153,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/UserDto"
                 }
               }
             }
@@ -675,45 +705,6 @@
           }
         }
       },
-      "User": {
-        "type": "object",
-        "additionalProperties": false,
-        "required": [
-          "email"
-        ],
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "email": {
-            "type": "string",
-            "format": "email",
-            "minLength": 1
-          },
-          "name": {
-            "type": "string"
-          },
-          "baskets": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Basket"
-            }
-          },
-          "orders": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Order"
-            }
-          },
-          "addresses": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Address"
-            }
-          }
-        }
-      },
       "Basket": {
         "type": "object",
         "additionalProperties": false,
@@ -947,205 +938,6 @@
           "name": {
             "type": "string",
             "minLength": 1
-          }
-        }
-      },
-      "Order": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "userId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "user": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
-          },
-          "orderDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "total": {
-            "type": "number",
-            "format": "decimal"
-          },
-          "status": {
-            "type": "string"
-          },
-          "shippingAddressId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "shippingAddress": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Address"
-              }
-            ]
-          },
-          "billingAddressId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "billingAddress": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Address"
-              }
-            ]
-          },
-          "items": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/OrderItem"
-            }
-          },
-          "payment": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Payment"
-              }
-            ]
-          }
-        }
-      },
-      "Address": {
-        "type": "object",
-        "additionalProperties": false,
-        "required": [
-          "street",
-          "city",
-          "zipCode",
-          "country"
-        ],
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "userId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "user": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
-          },
-          "street": {
-            "type": "string",
-            "minLength": 1
-          },
-          "city": {
-            "type": "string",
-            "minLength": 1
-          },
-          "state": {
-            "type": "string"
-          },
-          "zipCode": {
-            "type": "string",
-            "minLength": 1
-          },
-          "country": {
-            "type": "string",
-            "minLength": 1
-          }
-        }
-      },
-      "OrderItem": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "orderId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "order": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Order"
-              }
-            ]
-          },
-          "productId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "product": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Product"
-              }
-            ]
-          },
-          "quantity": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "price": {
-            "type": "number",
-            "format": "decimal"
-          }
-        }
-      },
-      "Payment": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "orderId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "order": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Order"
-              }
-            ]
-          },
-          "amount": {
-            "type": "number",
-            "format": "decimal"
-          },
-          "method": {
-            "type": "string"
-          },
-          "status": {
-            "type": "string"
-          },
-          "paymentDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "transactionId": {
-            "type": "string"
           }
         }
       }
